# rgx

./: CHANGELOG.md  Cargo.toml  README.md  cliff.toml  release-plz.toml
.github/workflows/: release-plz.yml
docs/: ROADMAP.md  advanced.md  shortcuts.md
launch/: devto_article.md
plugin/vscode/: .vscodeignore  package-lock.json  package.json
src/: app.rs  codegen.rs  main.rs
src/engine/: mod.rs  pcre2_debug.rs
src/explain/: formatter.rs
src/filter/: app.rs  json_path.rs  mod.rs
src/input/: editor.rs  handler.rs  mod.rs  vim.rs
src/ui/: debugger.rs  mod.rs  status_bar.rs  syntax_highlight.rs
tests/: debugger_tests.rs  engine_tests.rs  filter_tests.rs  grex_tests.rs  ui_tests.rs
